[gd_scene load_steps=2 format=3 uid="uid://b5qsdiqm2d08h"]

[ext_resource type="Script" uid="uid://b5ec4fe2ijb6f" path="res://battles/scenes/battle.gd" id="1_pwrko"]

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pwrko")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 648.0

[node name="Opponent" type="Panel" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 234.0

[node name="Pokemon" type="Panel" parent="Opponent"]
layout_mode = 0
offset_left = 303.0
offset_top = 1.0
offset_right = 541.0
offset_bottom = 235.0

[node name="pokemon" type="TextureRect" parent="Opponent/Pokemon"]
layout_mode = 0
offset_right = 236.0
offset_bottom = 235.0

[node name="elemente" type="TextureRect" parent="Opponent/Pokemon"]
layout_mode = 0
offset_left = -26.0
offset_top = 211.0
offset_right = -2.0
offset_bottom = 232.0

[node name="hp" type="Label" parent="Opponent/Pokemon"]
layout_mode = 0
offset_left = -40.0
offset_bottom = 23.0

[node name="max_hp" type="Label" parent="Opponent/Pokemon"]
layout_mode = 0
offset_left = -82.0
offset_right = -42.0
offset_bottom = 23.0

[node name="stm" type="Label" parent="Opponent/Pokemon"]
layout_mode = 0
offset_left = -40.0
offset_top = 32.0
offset_bottom = 55.0

[node name="fat" type="Label" parent="Opponent/Pokemon"]
layout_mode = 0
offset_left = -40.0
offset_top = 69.0
offset_bottom = 92.0

[node name="nam" type="Label" parent="Opponent/Pokemon"]
layout_mode = 0
offset_left = -90.0
offset_top = 114.0
offset_right = -50.0
offset_bottom = 137.0

[node name="max_stm" type="Label" parent="Opponent/Pokemon"]
layout_mode = 0
offset_left = -82.0
offset_top = 32.0
offset_right = -42.0
offset_bottom = 55.0

[node name="element" type="Label" parent="Opponent/Pokemon"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Player" type="Panel" parent="Opponent"]
layout_mode = 0
offset_left = 715.0
offset_top = 1.0
offset_right = 953.0
offset_bottom = 235.0

[node name="player" type="TextureRect" parent="Opponent/Player"]
layout_mode = 0
offset_right = 236.0
offset_bottom = 235.0

[node name="elemente" type="TextureRect" parent="Opponent/Player"]
layout_mode = 0
offset_left = -26.0
offset_top = 211.0
offset_right = -2.0
offset_bottom = 232.0

[node name="hp" type="Label" parent="Opponent/Player"]
layout_mode = 0
offset_left = -40.0
offset_bottom = 23.0

[node name="max_hp" type="Label" parent="Opponent/Player"]
layout_mode = 0
offset_left = -82.0
offset_right = -42.0
offset_bottom = 23.0

[node name="stm" type="Label" parent="Opponent/Player"]
layout_mode = 0
offset_left = -40.0
offset_top = 32.0
offset_bottom = 55.0

[node name="fat" type="Label" parent="Opponent/Player"]
layout_mode = 0
offset_left = -40.0
offset_top = 69.0
offset_bottom = 92.0

[node name="max_stm" type="Label" parent="Opponent/Player"]
layout_mode = 0
offset_left = -82.0
offset_top = 32.0
offset_right = -42.0
offset_bottom = 55.0

[node name="nam" type="Label" parent="Opponent/Player"]
layout_mode = 0
offset_left = -104.0
offset_top = 124.0
offset_right = -64.0
offset_bottom = 147.0

[node name="element" type="Label" parent="Opponent/Player"]
layout_mode = 0
offset_left = -412.0
offset_right = -372.0
offset_bottom = 23.0

[node name="Player" type="Panel" parent="."]
layout_mode = 0
offset_top = 413.0
offset_right = 1152.0
offset_bottom = 647.0

[node name="Pokemon" type="Panel" parent="Player"]
layout_mode = 0
offset_left = 303.0
offset_right = 541.0
offset_bottom = 234.0

[node name="pokemon" type="TextureRect" parent="Player/Pokemon"]
layout_mode = 0
offset_right = 236.0
offset_bottom = 235.0

[node name="elemente" type="TextureRect" parent="Player/Pokemon"]
layout_mode = 0
offset_left = -26.0
offset_top = 211.0
offset_right = -2.0
offset_bottom = 232.0

[node name="hp" type="Label" parent="Player/Pokemon"]
layout_mode = 0
offset_left = -40.0
offset_bottom = 23.0

[node name="max_hp" type="Label" parent="Player/Pokemon"]
layout_mode = 0
offset_left = -82.0
offset_right = -42.0
offset_bottom = 23.0

[node name="stm" type="Label" parent="Player/Pokemon"]
layout_mode = 0
offset_left = -40.0
offset_top = 32.0
offset_bottom = 55.0

[node name="fat" type="Label" parent="Player/Pokemon"]
layout_mode = 0
offset_left = -40.0
offset_top = 69.0
offset_bottom = 92.0

[node name="max_stm" type="Label" parent="Player/Pokemon"]
layout_mode = 0
offset_left = -82.0
offset_top = 32.0
offset_right = -42.0
offset_bottom = 55.0

[node name="nam" type="Label" parent="Player/Pokemon"]
layout_mode = 0
offset_left = -100.0
offset_top = 133.0
offset_right = -60.0
offset_bottom = 156.0

[node name="element" type="Label" parent="Player/Pokemon"]
layout_mode = 0
offset_top = -412.0
offset_right = 40.0
offset_bottom = -389.0

[node name="Player" type="Panel" parent="Player"]
layout_mode = 0
offset_left = 715.0
offset_right = 953.0
offset_bottom = 234.0

[node name="player" type="TextureRect" parent="Player/Player"]
layout_mode = 0
offset_right = 236.0
offset_bottom = 235.0

[node name="elemente" type="TextureRect" parent="Player/Player"]
layout_mode = 0
offset_left = -26.0
offset_top = 211.0
offset_right = -2.0
offset_bottom = 232.0

[node name="hp" type="Label" parent="Player/Player"]
layout_mode = 0
offset_left = -40.0
offset_bottom = 23.0

[node name="max_hp" type="Label" parent="Player/Player"]
layout_mode = 0
offset_left = -82.0
offset_right = -42.0
offset_bottom = 23.0

[node name="stm" type="Label" parent="Player/Player"]
layout_mode = 0
offset_left = -40.0
offset_top = 32.0
offset_bottom = 55.0

[node name="fat" type="Label" parent="Player/Player"]
layout_mode = 0
offset_left = -40.0
offset_top = 69.0
offset_bottom = 92.0

[node name="max_stm" type="Label" parent="Player/Player"]
layout_mode = 0
offset_left = -82.0
offset_top = 32.0
offset_right = -42.0
offset_bottom = 55.0

[node name="nam" type="Label" parent="Player/Player"]
layout_mode = 0
offset_left = -71.0
offset_top = 120.0
offset_right = -31.0
offset_bottom = 143.0

[node name="element" type="Label" parent="Player/Player"]
layout_mode = 0
offset_left = -412.0
offset_top = -412.0
offset_right = -372.0
offset_bottom = -389.0

[node name="Actions" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="fight" type="Button" parent="Actions"]
layout_mode = 0
offset_top = 234.0
offset_right = 64.0
offset_bottom = 250.0

[node name="plr_atk" type="Button" parent="Actions"]
layout_mode = 0
offset_top = 250.0
offset_right = 64.0
offset_bottom = 266.0

[node name="switch" type="Button" parent="Actions"]
layout_mode = 0
offset_top = 266.0
offset_right = 64.0
offset_bottom = 282.0

[node name="item" type="Button" parent="Actions"]
layout_mode = 0
offset_top = 282.0
offset_right = 64.0
offset_bottom = 298.0

[node name="run" type="Button" parent="Actions"]
layout_mode = 0
offset_top = 298.0
offset_right = 64.0
offset_bottom = 314.0

[node name="Moves" type="Panel" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 233.0
offset_right = 141.0
offset_bottom = 312.0

[node name="move1" type="Button" parent="Moves"]
layout_mode = 0
offset_left = 11.0
offset_top = 13.0
offset_right = 63.0
offset_bottom = 27.0

[node name="move2" type="Button" parent="Moves"]
layout_mode = 0
offset_left = 11.0
offset_top = 27.0
offset_right = 63.0
offset_bottom = 41.0

[node name="move3" type="Button" parent="Moves"]
layout_mode = 0
offset_left = 11.0
offset_top = 41.0
offset_right = 63.0
offset_bottom = 55.0

[node name="move4" type="Button" parent="Moves"]
layout_mode = 0
offset_left = 11.0
offset_top = 55.0
offset_right = 63.0
offset_bottom = 69.0

[node name="Log" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 319.0
offset_right = 44.0
offset_bottom = 342.0

[connection signal="pressed" from="Actions/fight" to="." method="_on_fight_pressed"]
[connection signal="pressed" from="Actions/plr_atk" to="." method="_on_plr_atk_pressed"]
[connection signal="pressed" from="Actions/run" to="." method="_on_run_pressed"]
[connection signal="pressed" from="Moves/move1" to="." method="_on_move_pressed" binds= [NodePath(".")]]
[connection signal="pressed" from="Moves/move2" to="." method="_on_move_pressed" binds= [NodePath(".")]]
[connection signal="pressed" from="Moves/move3" to="." method="_on_move_pressed" binds= [NodePath(".")]]
[connection signal="pressed" from="Moves/move4" to="." method="_on_move_pressed" binds= [NodePath(".")]]
